# WindyWind

./: .gitignore  AGENTS.md  PROJECT.md  README.md  main.py  pyproject.toml  test.ipynb
Docs/: PROJECT.md  README.md  added_first_strategy_and_alignment_2026-04-09.md  added_first_working_hypothesis_2026-04-09.md  added_heterogeneity_branch_map_2026-04-07.md  better_ds_spec_4_5.md  data_catalog.md  data_quality_and_findings.md  deployable_fusion_validation_plan_2026-04-07.md  howfast_refactor_final_spec_2026-04-03.md  project_roadmap_and_method_notes.md  route_gate_strategy_2026-04-07.md  sparse_router_residual_moe_v1_design_2026-04-08.md  suggestions.md  table_pipeline.md  video_manual_annotation_assets.md  video_module_design_notes.md  video_pipeline.md  video_rpm_cv_pipeline.md  wind_speed_regression_experiment_report_2026-04-08.md
Docs/experiments/: 071_residual_regressor_ablation_2026-04-13.md  added2_domain_diagnosis_2026-04-08.md  added_added2_late_fusion_loco_quickcheck_2026-04-09.md  (+53 more)
config/: 2500_2600.yaml  test.yaml
outputs/: case_level_predictions.csv  data_quality_missing_columns.csv  data_quality_summary.csv  model_summary.csv  unlabeled_predictions.csv  window_level_predictions.csv
src/: __init__.py  data_loading.py  data_quality.py  experiment.py  features.py
tests/: test_current_data_loading.py  test_modal_parameter_identification.py  test_phase1_feature_groups.py  test_phase3_cnn_tcn_smoke.py  test_phase3_end_to_end_shortlist.py  test_phase3_tcn_window_length_scan.py  test_windnotfound.py  test_windywindhowfast_annotation.py
(+263 files in other folders)
